# Operating-Systems-Labs

lab2/: CMakeLists.txt  build.sh
lab2/connections/: conn.h  connection.h
lab3/: Set.h  Tests.h  build.sh  main.cpp
